objects/Doctor__c.object
<CustomObject>
    <description>Information about each Doctor at Hospital St Pierre</description>
    <fields>
        <fullName>Doctor_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the name of the Doctor.</description>
        <inlineHelpText>Please chose the name of the Doctor.</inlineHelpText>
        <label>Doctor&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Doctors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_School__c</fullName>
        <description>This is the name of the school where the doctor graduated from.</description>
        <inlineHelpText>Please spell out the name of the school.</inlineHelpText>
        <label>Name of School</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specializations__c</fullName>
        <description>These are the areas that the doctor is qualified</description>
        <inlineHelpText>Please enter the proper specialization</inlineHelpText>
        <label>Specializations</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>General Practice</fullName>
                </value>
                <value>
                    <fullName>Infant Care</fullName>
                </value>
                <value>
                    <fullName>Oncologist</fullName>
                </value>
                <value>
                    <fullName>Orthopedic</fullName>
                </value>
                <value>
                    <fullName>Surgeon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_of_Graduation__c</fullName>
        <description>This is the year when the doctor was graduated.</description>
        <inlineHelpText>Please enter the correct date as  MM/DD-YYYY.</inlineHelpText>
        <label>Year of Graduation</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Doctor_s_Name__c</columns>
        <columns>Specializations__c</columns>
        <columns>Name_of_School__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Doctor Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Location__c</fullName>
        <label>Location</label>
    </sharingReasons>
</CustomObject>